# code_to_pdf

./: .#pseudo.py  .codecov.yml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  _Pipfile  comands.py  html_generator.py  latex-0.7.0.dev1-py3-none-any.whl  main.py  output.html  pdf_generator.py  pseudo.py  pyproject.toml  setup.cfg  setup.py  test_git.py  toc_generator.py  topdf.py  tree_generator.py  tree_walk.py  walkfind-0.0.5-py3-none-any.whl
.github/workflows/: github-actions-test.yaml
code_to_pdf/: .#requirements.txt  Makefile  __main__.py  base.tex  generate.py  requirements.txt
docs/: Makefile
docs/source/: conf.py  html_generator.rst  index.rst  modules.rst  pdf_generator.rst  toc_generator.rst  tree_generator.rst
latex/: .gitignore  Makefile  base.tex  doc.tex  generate.py  main.tex
src/code_to_pdf/: __main__.py  code_to_pdf.py  html_generator.py  main.py  pdf_generator.py  run.py  template.html  temporal.py  toc_generator.py  tree_generator.py
tests/: .coverage  Makefile  params.yaml  test_cli.py
toc_template/: template.html  toc.html
