[project]
name = "code_to_pdf"
version = "0.5"
authors = [{name = "Isidro Arias", email = "isidroariass@hotmail.es"}]
description = "Convert a software project to a pdf book" # Generates a PDF book from any given code project
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
  "latex",
  "Pygments",
  "Jinja2",
  "walkfind",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pylint",
    "coverage",
    "types-PyYAML",
    "pre-commit",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/isidroas/code_to_pdf"
"Bug Tracker" = "https://github.com/isidroas/code_to_pdf/issues"

[project.scripts]
code_to_pdf = "code_to_pdf.__main__:main"
code_to_pdf_parameter_example_file = "code_to_pdf.run:print_yaml_example"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.isort]
profile = "black"

[tool.vulture]
paths = ["code_to_pdf"]