[project]
name = "code_to_pdf"
version = "0.5"
authors = [{name = "Isidro Arias", email = "isidroariass@hotmail.es"}]
description = "Convert a software project to a pdf book" # Generates a PDF book from any given code project
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = [
  "latex",
  "Pygments",
  "Jinja2",
  "walkfind",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pylint",
    "coverage",
    "types-PyYAML",
    "pre-commit",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/isidroas/code_to_pdf"
"Bug Tracker" = "https://github.com/isidroas/code_to_pdf/issues"

[project.scripts]
code_to_pdf = "code_to_pdf.generate:main"

[tool.setuptools]
packages = ["code_to_pdf"]

[tool.setuptools.package-data]
code_to_pdf = ["templates/*.tex"]

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.isort]
profile = "black"

[tool.vulture]
paths = ["code_to_pdf"]