[metadata]
name = code-to-pdf-isidroas
version = 0.0.1
author = Isidro Arias
author_email = isidroariass@hotmail.es
description = This convert a software proyect to a pdf book
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/isidroas/code_to_pdf
project_urls =
    Bug Tracker = https://github.com/isidroas/code_to_pdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

